<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="92dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="141dp"
        android:contentDescription="@string/schoollogo"
        app:layout_constraintBottom_toTopOf="@+id/fullname"
        app:layout_constraintEnd_toStartOf="@+id/schoolname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/unilogo" />

    <TextView
        android:id="@+id/schoolname"
        android:layout_width="301dp"
        android:layout_height="75dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="9dp"
        android:text="@string/scholars_association_university"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="378dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_names"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/reg_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/reg_no"
        android:layout_width="378dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/registration_number"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/course"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/course"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/dept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/profile"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="146dp"

        android:layout_marginBottom="23dp"
        android:contentDescription="@string/upload_profile_photo"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolname"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/dept"
        android:layout_width="206dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="205dp"
        android:text="@string/select_your_department"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="159dp"
        android:layout_height="158dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="89dp"
        android:background="#024CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dept"
        app:layout_constraintTop_toBottomOf="@+id/course"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/copas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copas"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck,VisualLintBounds" />

        <RadioButton
            android:id="@+id/cohes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cohes"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck,VisualLintBounds" />

        <RadioButton
            android:id="@+id/scit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scit"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="VisualLintBounds" />
    </RadioGroup>

    <Button
        android:id="@+id/saveprofile"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="19dp"
        android:text="@string/save_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />



</androidx.constraintlayout.widget.ConstraintLayout>